--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -33,17 +33,17 @@
 
 // Palette.
 	$palette: (
-		bg:					#312450,
-		bg-alt:				darken(#312450, 5),
-		fg:					rgba(255,255,255,0.55),
+		bg:					#98A8DF,
+		bg-alt:				darken(#98A8DF, 5),
+		fg:					rgba(255,255,255,0.75),
 		fg-bold:			#ffffff,
 		fg-light:			rgba(255,255,255,0.35),
 		border:				rgba(255,255,255,0.15),
 		border-bg:			rgba(255,255,255,0.05),
-		accent1:			#5e42a6,
-		accent1-alt:		darken(#5e42a6, 10),
-		accent2:			#5052b5,
-		accent2-alt:		darken(#5052b5, 10),
-		accent3:			#b74e91,
-		accent3-alt:		darken(#b74e91, 10)
+		accent1:			#7683AD,
+		accent1-alt:		darken(#7683AD, 10),
+		accent2:			#7683AD,
+		accent2-alt:		darken(#7683AD, 10),
+		accent3:			#92A2D6,
+		accent3-alt:		darken(#92A2D6, 10)
 	);
